--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,20 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
+        <div id="activity-controls">
+          <input type="text" id="search-input" placeholder="Search activities..." />
+          <select id="filter-select">
+            <option value="all">All</option>
+            <option value="club">Club</option>
+            <option value="team">Team</option>
+            <option value="class">Class</option>
+            <option value="other">Other</option>
+          </select>
+          <select id="sort-select">
+            <option value="name">Sort by Name</option>
+            <option value="participants">Sort by Participants</option>
+          </select>
+        </div>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
